--- a/public/test.article.html
+++ b/public/test.article.html
@@ -25,7 +25,7 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-default">
+    <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
@@ -71,7 +71,7 @@
                             <li><a href="#">Separated link</a></li>
                         </ul>
                     </li> -->
-                </ul>
+               
             </div>
             <!-- /.navbar-collapse -->
         </div>
@@ -195,8 +195,83 @@
         </div>
         <div class="col-md-4"></div>
 
-    </div>
 
+
+        <div>
+            <h1>Example page header <small>Subtext for header</small></h1>
+            <p> headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia
+                headingMedia headffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffasdhgsegesrgerrrrra headingMedia
+                headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia headffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffasdhgsegesrgerrrrra
+                headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia
+                headffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffasdhgsegesrgerrrrra headingMedia headingMedia
+                headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia headffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffasdhgsegesrgerrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrsrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrringMedia
+                headingMedia headingMedia heading</p>
+        </div>
+
+
+
+
+
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">留言</h3>
+            </div>
+            <div class="panel-body">
+                <div class="media">
+                    <div class="media-left">
+                         <input type="image" src="./img/64.png" /> 
+                    </div>
+                    <div class="media-body">
+                        <textarea class="form-control" id="summary" rows="4" placeholder="文章留言"></textarea>
+                    </div>
+                </div>
+
+                <div class="media">
+                    <div class="media-left">
+                        <a href="#">
+                            <img class="media-object" src="./img/64.png" alt="...">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading">Media headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia
+                            headingMedia headingMedia headingMedia headffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffasdhgsegesrgerrrrra
+                            headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia
+                            headingMedia headffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffasdhgsegesrgerrrrra
+                            headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia
+                            headingMedia headffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffasdhgsegesrgerrrrra
+                            headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia
+                            headingMedia headffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffasdhgsegesrgerrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrsrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrringMedia
+                            headingMedia headingMedia heading</h4>
+                    </div>
+                </div>
+
+                <div class="media">
+                    <div class="media-left">
+                        <a href="#">
+                                  <img class="media-object" src="./img/64.png" alt="...">
+                                </a>
+                    </div>
+                    <div class="media-body">
+                        <h4 class="media-heading">Media headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia
+                            headingMedia headingMedia headingMedia headffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffasdhgsegesrgerrrrra
+                            headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia
+                            headingMedia headffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffasdhgsegesrgerrrrra
+                            headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia
+                            headingMedia headffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffasdhgsegesrgerrrrra
+                            headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia headingMedia
+                            headingMedia headffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffffasdhgsegesrgerrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrsrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrrringMedia
+                            headingMedia headingMedia heading</h4>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+
+
+
+
+
+    </div>
 
 
 
